--- a/examples/full_app_meta/talk_contracts/package.json
+++ b/examples/full_app_meta/talk_contracts/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "full_app_service_a",
+  "name": "talk_contracts",
   "publishConfig": {
     "registry": "https://www.npmjs.com"
   },
   "version": "1.0.0",
   "description": "demonstration project for showcasing stuff",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/commonjs/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
     "start": "node bin/start.js",
@@ -17,7 +17,6 @@
   },
   "devDependencies": {
     "@essential-projects/tslint-config": "^1.0.0-rc3",
-    "full_app_service_contracts": "^1.0.0",
     "gulp": "^3.9.1",
     "gulptraum": "^2.2.4",
     "gulptraum-typescript": "^1.3.9",
