--- a/examples/full_app_meta/talk_http/package.json
+++ b/examples/full_app_meta/talk_http/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "full_app_service_contracts",
+  "name": "talk_http",
   "publishConfig": {
     "registry": "https://www.npmjs.com"
   },
   "version": "1.0.0",
   "description": "demonstration project for showcasing stuff",
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist/commonjs/index.js",
   "typings": "dist/index.d.ts",
   "scripts": {
     "start": "node bin/start.js",
     "build": "gulp build"
   },
   "dependencies": {
-    "loggerhythm": "^3.0.0"
+    "@essential-projects/core_contracts": "^1.0.0-rc3",
+    "express": "^4.16.2",
+    "loggerhythm": "^3.0.0",
+    "talk_contracts": "^1.0.0"
   },
   "devDependencies": {
     "@essential-projects/tslint-config": "^1.0.0-rc3",
+    "@types/express": "^4.11.1",
     "gulp": "^3.9.1",
     "gulptraum": "^2.2.4",
     "gulptraum-typescript": "^1.3.9",
