--- a/examples/02_3_dependency_injection/dependency_injection/package.json
+++ b/examples/02_3_dependency_injection/dependency_injection/package.json
@@ -15,6 +15,7 @@
   "dependencies": {},
   "devDependencies": {
     "@essential-projects/tslint-config": "^1.0.0-rc3",
+    "dependency_injection_contracts": "^1.0.0",
     "gulp": "^3.9.1",
     "gulptraum": "^2.2.4",
     "gulptraum-typescript": "^1.3.9",
