--- a/examples/03_1_full_app_decoupled_meta/package.json
+++ b/examples/03_1_full_app_decoupled_meta/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "postinstall": "minstall .",
-    "build": "meta exec \"npm run build\" --exclude=full_app_meta"
+    "build": "meta exec \"npm run build\" --exclude=03_1_full_app_decoupled_meta"
   },
   "author": "",
   "license": "ISC",
